[metadata]
name = service_journal
author = Christopher De Jesus
author_email = cd525@cornell.edu
version = file: VERSION
description = A framework for journaling TCAT bus activity.
long_description = file: README.md
keywords = bus, TCAT
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Framework :: Flask
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Database
    Topic :: Office/Business :: News/Diary
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Utilities


[options]
package_dir=
    =src
packages = find:
install_requires =
    pyodbc
    flask
    wheel
    shapely
    geopy

[options.packages.find]
where=src

[files]
packages =
    src/service_journal