[metadata]
name = service_journal
author = Christopher De Jesus
author-email = cd525@cornell.edu
summary = A framework for journaling TCAT bus activity.
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Framework :: Flask
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Database
    Topic :: Office/Business :: News/Diary
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Utilities
keywords =
    bus
    TCAT

[files]
packages =
    service_journal